2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Make it work for parallel build.

2008-12-03  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.addin.xml: Set correct packing for Web deployment
	panel.

2008-12-03  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.addin.xml: Move options panels to more appropriate
	categories.

	* gtk-gui/gui.stetic: Flush.

2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* AspNetAddIn.mdp:
	* AssemblyInfo.cs: Add AssemblyInfo.cs files that are autogenerated from
	the addin manifests.

2008-11-27  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Parser/DocumentReferenceManager.cs: Use
	DocumentationService to look up class documentation lazily.

2008-11-26  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet/AspNetAppProject.cs: If project's CompileTarget
	isn't "Library", automatically fix it, since older versions of MD did
	not set it correctly.

2008-11-25  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Html/HtmlParser.cs: Implement multiple root element
	validation since parser no longer handles this.

2008-11-19  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Improve accuracy of
	completions for controls' children. Add support for completing
	properties' childen.

	* MonoDevelop.AspNet/WebTypeManager.cs:
	* MonoDevelop.AspNet.Parser/DocumentReferenceManager.cs: Extend lookup
	methods to be able to look for types other than Control.

2008-11-18  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.StateEngine/HtmlTagState.cs: Improve error location
	precision for implicitly self-closing tags.

2008-11-18  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Improve element
	completion.

	* MonoDevelop.AspNet.Parser/DocumentReferenceManager.cs: Make
	AspTagCompletionData public.
